# pqaudit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml
.github/actions/pqaudit/: action.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-19-pqaudit-v1.md  2026-03-19-readme-wiki-overhaul.md
docs/superpowers/specs/: 2026-03-18-pqaudit-design.md  2026-03-19-readme-wiki-overhaul-design.md
examples/: pqaudit-scan.yml
skills/: pqaudit.md
src/: lib.rs  main.rs
src/audit/: cert_chain.rs  compliance.rs  findings.rs  hndl.rs  mod.rs  remediation.rs
src/audit/scoring/: binary_gates.rs  cnsa2_strict.rs  mod.rs  model.rs  weighted.rs
src/audit/tables/: cnsa2.rs  fips.rs  iana_ciphers.rs  iana_groups.rs  iana_sigalgs.rs  mod.rs  nist_ir8547.rs
src/baseline/: mod.rs
src/cli/: mod.rs
src/mcp/: mod.rs
src/output/: cbom.rs  compare.rs  human.rs  json.rs  mod.rs  sarif.rs
src/probe/: cipher_enum.rs  downgrade.rs  handshake.rs  hrr.rs  mod.rs  pqc_probe.rs  starttls.rs
src/scanner/: mod.rs
tests/: probe_tests.rs
